# Domain-Driven-Development---Onion-Architecture

./: app.py  class.json  grade.json  pyproject.toml  section.json  service.py
adapters/academics/: repository.py
domain/academics/: command.py  model.py
service_layer/academics/: abstract.py  handler.py  unit_of_work.py
