[tool.poetry]
name = "ddd"
version = "0.1.0"
description = ""
authors = ["Rajesh Pudasaini <pudasainirajesh504@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
